--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "npx tailwindcss -i ./public/styles/tailwind.css -o ./public/styles/output.css && node app",
-    "prepare": "husky",
+    "prepare": "husky install",
     "format": "prettier --write .",
     "lint": "eslint ."
   },
