--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "npx tailwindcss -i ./public/styles/tailwind.css -o ./public/styles/output.css && node app",
     "prepare": "husky install",
     "format": "prettier --write .",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "test": "jest"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
@@ -42,6 +43,10 @@
     "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
-    "nodemon": "^3.1.9"
+    "@babel/preset-env": "^7.26.0",
+    "babel-jest": "^29.7.0",
+    "jest": "^29.7.0",
+    "nodemon": "^3.1.9",
+    "supertest": "^7.0.0"
   }
 }
